// Copyright (C) 2024 Quickwit, Inc.
//
// Quickwit is offered under the AGPL v3.0 and as commercial software.
// For commercial licensing, contact us at hello@quickwit.io.
//
// AGPL:
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package hello;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message GoodbyeRequest {
    string name = 1;
}

message GoodbyeResponse {
    string message = 1;
}

message PingRequest {
    string name = 1;
}

message PingResponse {
    string message = 1;
}

service Hello {
    // Says hello.
    rpc Hello(HelloRequest) returns (HelloResponse);

    // Says goodbye.
    rpc Goodbye(GoodbyeRequest) returns (GoodbyeResponse);

    // Ping pong.
    rpc Ping(stream PingRequest) returns (stream PingResponse);
}
